Try to fix build in github actionis

--- a/.github/workflows/cpu-stats-exporter.yml
+++ b/.github/workflows/cpu-stats-exporter.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Use path with golang
         run: export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
       - name: Check that executable is built
-        run: make build-x64
+        run: PATH=$PATH:/usr/local/go/bin:$GOPATH/bin make build-x64
   deploy:
     runs-on: self-hosted
     needs: [build]
