--- a/.github/workflows/cpu-stats-exporter.yml
+++ b/.github/workflows/cpu-stats-exporter.yml
@@ -6,14 +6,13 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-      - name: Use path with golang
-      - name: Check that executable is built
+      - name: Check that go fmt is ok with main.go
         run: PATH=$PATH:/usr/local/go/bin:$GOPATH/bin go fmt main.go
   build:
     runs-on: self-hosted
+    needs: [linter]
     steps:
       - uses: actions/checkout@v2
-      - name: Use path with golang
       - name: Check that executable is built
         run: PATH=$PATH:/usr/local/go/bin:$GOPATH/bin make build-x64
   deploy:
