--- a/ansible/dependencies-cpu-stats-exporter/tasks/main.yml
+++ b/ansible/dependencies-cpu-stats-exporter/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: Add go binary path to ~/.profile
   lineinfile:
     path: /etc/profile
-    line: 'export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin'
+    line: export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
     create: true
     state: present
 
