--- a/ansible/roles/cpu-stats-exporter/defaults/main.yml
+++ b/ansible/roles/cpu-stats-exporter/defaults/main.yml
@@ -2,7 +2,5 @@ project_name: cpu-stats-exporter
 binary_name: cpu-stats-exporter-x64
 project_path: /opt/{{ project_name }}/bin
 build_path: /opt/{{ project_name }}/build
-source_local_path: ../../.
-user: twtrp
-group: twtrp
+source_local_path: ../../../.
 go_version: 1.20.1
